--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Poema a la Luna</title>
+<title>Tarejta postal</title>
 <style>
   @keyframes twinkle {
     0%, 100% { opacity: 1; }
@@ -27,7 +27,7 @@
   body {
     margin: 0;
     height: 100vh;
-    background: radial-gradient(circle at center, #0d1b2a, #000000);
+    background: radial-gradient(circle at center, #192d43, #000000);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,7 +88,7 @@
     background: rgba(20, 36, 61, 0.85);
     padding: 40px;
     border-radius: 15px;
-    box-shadow: 0 0 25px 5px #7462ef;
+    box-shadow: 0 0 25px 5px #f8f8f9;
     max-width: 400px;
     width: 100%; /* Asegura que el contenedor no exceda el ancho de la pantalla */
     user-select: none;
@@ -98,8 +98,8 @@
   .poem-container h1 {
     margin-bottom: 1em;
     font-weight: 700;
-    color: #9f83ff;
-    text-shadow: 0 0 10px #9f83ff;
+    color: #d2d1d4;
+    text-shadow: 0 0 10px #cac9cd;
   }
   .poem-container p {
     font-size: 1.25rem;
@@ -110,21 +110,21 @@
     margin-bottom: 1.5em;
     font-size: 4rem;
     color: #d9d9f7;
-    text-shadow: 0 0 5px #b3a7ff, 0 0 15px #a178ff, 0 0 25px #8d56ff;
+    text-shadow: 0 0 5px #cfced2, 0 0 15px #cacacc, 0 0 25px #d1d0d3;
   }
   .author {
     margin-top: 1em;
     font-style: italic;
-    color: #b3a7ff;
+    color: #d2d2d7;
     font-size: 1rem;
-    text-shadow: 0 0 5px #7462ef;
+    text-shadow: 0 0 5px #cfcfd3;
   }
   .dedication {
     margin-top: 1em;
     font-weight: 600;
-    color: #c1a1ff;
+    color: #edecee;
     font-size: 1.1rem;
-    text-shadow: 0 0 8px #9f83ff;
+    text-shadow: 0 0 8px #f8f8fb;
   }
 
   /* Media Queries for Responsiveness */
@@ -159,9 +159,64 @@
     <div class="star medium" style="top: 15%; left: 80%; animation-delay: 1s;"></div>
     <div class="star large" style="top: 5%; left: 60%; animation-delay: 0.8s;"></div>
     <div class="star small" style="top: 50%; left: 90%; animation-delay: 1.7s;"></div>
+    <div class="star small" style="top: 10%; left: 15%; animation-delay: 0s;"></div>
+    <div class="star medium" style="top: 25%; left: 30%; animation-delay: 1.2s;"></div>
+    <div class="star large" style="top: 40%; left: 50%; animation-delay: 0.7s;"></div>
+    <div class="star small" style="top: 60%; left: 10%; animation-delay: 2s;"></div>
+    <div class="star medium" style="top: 70%; left: 75%; animation-delay: 1.5s;"></div>
+    <div class="star large" style="top: 80%; left: 30%; animation-delay: 0.4s;"></div>
+    <div class="star small" style="top: 90%; left: 85%; animation-delay: 2.5s;"></div>
+    <div class="star medium" style="top: 15%; left: 80%; animation-delay: 1s;"></div>
+    <div class="star large" style="top: 5%; left: 60%; animation-delay: 0.8s;"></div>
+    <div class="star small" style="top: 50%; left: 90%; animation-delay: 1.7s;"></div>
+    <div class="star small" style="top: 10%; left: 15%; animation-delay: 0s;"></div>
+    <div class="star medium" style="top: 25%; left: 30%; animation-delay: 1.2s;"></div>
+    <div class="star large" style="top: 40%; left: 50%; animation-delay: 0.7s;"></div>
+    <div class="star small" style="top: 60%; left: 10%; animation-delay: 2s;"></div>
+    <div class="star medium" style="top: 70%; left: 75%; animation-delay: 1.5s;"></div>
+    <div class="star large" style="top: 80%; left: 30%; animation-delay: 0.4s;"></div>
+    <div class="star small" style="top: 90%; left: 85%; animation-delay: 2.5s;"></div>
+    <div class="star medium" style="top: 15%; left: 80%; animation-delay: 1s;"></div>
+    <div class="star large" style="top: 5%; left: 60%; animation-delay: 0.8s;"></div>
+    <div class="star small" style="top: 50%; left: 90%; animation-delay: 1.7s;"></div>
+
+
+    <div class="star small" style="top: 13%; left: 17%; animation-delay: 0s;"></div>
+    <div class="star medium" style="top: 31%; left: 20%; animation-delay: 1.2s;"></div>
+    <div class="star large" style="top: 36%; left: 70%; animation-delay: 0.7s;"></div>
+    <div class="star small" style="top: 90%; left: 23%; animation-delay: 2s;"></div>
+    <div class="star medium" style="top: 70%; left: 75%; animation-delay: 1.5s;"></div>
+    <div class="star large" style="top: 65%; left: 60%; animation-delay: 0.4s;"></div>
+    <div class="star small" style="top: 50%; left: 45%; animation-delay: 2.5s;"></div>
+    <div class="star medium" style="top: 80%; left: 15%; animation-delay: 1s;"></div>
+    <div class="star large" style="top: 60%; left: 5%; animation-delay: 0.8s;"></div>
+    <div class="star small" style="top: 57%; left: 15%; animation-delay: 1.7s;"></div>
+
+    <div class="star small" style="top: 17%; left: 90%; animation-delay: 0s;"></div>
+    <div class="star medium" style="top: 47%; left: 81%; animation-delay: 1.2s;"></div>
+    <div class="star large" style="top: 70%; left: 32%; animation-delay: 0.7s;"></div>
+    <div class="star small" style="top: 23%; left: 95%; animation-delay: 2s;"></div>
+    <div class="star medium" style="top: 75%; left: 70%; animation-delay: 1.5s;"></div>
+    <div class="star large" style="top: 39%; left: 9%; animation-delay: 0.4s;"></div>
+    <div class="star small" style="top: 47%; left: 67%; animation-delay: 2.5s;"></div>
+    <div class="star medium" style="top: 80%; left: 15%; animation-delay: 1s;"></div>
+    <div class="star large" style="top: 60%; left: 5%; animation-delay: 0.8s;"></div>
+    <div class="star small" style="top: 57%; left: 15%; animation-delay: 1.7s;"></div>
   </div>
   <div class="shooting-star" aria-hidden="true"></div>
   <div class="poem-container" role="main" aria-label="Poema a la luna">
+    <div class="stars" aria-hidden="true">
+    <div class="star small" style="top: 17%; left: 90%; animation-delay: 0s;"></div>
+    <div class="star medium" style="top: 47%; left: 81%; animation-delay: 1.2s;"></div>
+    <div class="star large" style="top: 70%; left: 32%; animation-delay: 0.7s;"></div>
+    <div class="star small" style="top: 23%; left: 95%; animation-delay: 2s;"></div>
+    <div class="star medium" style="top: 75%; left: 70%; animation-delay: 1.5s;"></div>
+    <div class="star large" style="top: 39%; left: 9%; animation-delay: 0.4s;"></div>
+    <div class="star small" style="top: 47%; left: 67%; animation-delay: 2.5s;"></div>
+    <div class="star medium" style="top: 80%; left: 15%; animation-delay: 1s;"></div>
+    <div class="star large" style="top: 60%; left: 5%; animation-delay: 0.8s;"></div>
+    <div class="star small" style="top: 57%; left: 15%; animation-delay: 1.7s;"></div>
+    </div>
     <div class="author">De: Jesús Schwarzeneger reyes </div>
     <div class="dedication">Para: Lupiiz Sung</div>
     <div class="moon" aria-hidden="true">🌕</div>
